<resources>
    <string name="app_name" translatable="false">Linksy</string>
    <string name="select_language_title">Select the translation language:</string>
    <string name="next">Continue</string>
    <string name="sign_up_title">Sign up</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_birthday">Birthday</string>
    <string-array name="languages_array" translatable="false">
        <item>English</item>
        <item>Русский</item>
    </string-array>
    <string-array name="channel_type_array" translatable="true">
        <item>Public</item>
        <item>Private</item>
    </string-array>
    <string name="sign_up_button">Sign up</string>
    <string name="login_button">Login</string>
    <string name="question_have_an_account">Already have an account?</string>
    <string name="login_title">Login</string>
    <string name="checkbox_remember_me">Remember me</string>
    <string name="link_forgot_password">Forgot password?</string>
    <string name="button_create_account">Create account</string>
    <string name="password_recovery_title">Password Recovery</string>
    <string name="button_continue">Continue</string>
    <string name="button_back">Back</string>
    <string name="email_is_already_registered">This email is already registered</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="password_length_short">Password length must be greater than 6 characters</string>
    <string name="confirmation_code_sent">The confirmation code has been sent to:</string>
    <string name="send_button">Send</string>
    <string name="invalid_confirmation_code">Invalid confirmation code</string>
    <string name="failed_connection">Server connection error</string>
    <string name="didn_t_receive_the_code">Didn\'t receive the code?</string>
    <string name="cancel">Cancel</string>
    <string name="resend">Resend</string>
    <string name="user_not_found">The user was not found</string>
    <string name="code">Code</string>
    <string name="hint_new_password">New Password</string>
    <string name="change_button">Change</string>
    <string name="invalid_code_length">Enter a five-digit code</string>
    <string name="password_update">Password updated</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="profile">Profile</string>
    <string name="channels">Channels</string>
    <string name="chats">Chats</string>
    <string name="people">People</string>
    <string name="settings">Settings</string>
    <string name="feed">Feed</string>
    <string name="posts">Posts</string>
    <string name="moments">Moments</string>
    <string name="profile_settings">Profile</string>
    <string name="app_settings">App</string>
    <string name="confidentiality">Confidentiality</string>
    <string name="blacklist">Blacklist</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="share_your_thoughts">Share your thoughts..</string>
    <string name="error_loading_data"> An error occurred while loading data..</string>
    <string name="repeat">Repeat</string>
    <string name="change_password_link"><u>I want to change password</u></string>
    <string name="change_password_title">Change password</string>
    <string name="hint_old_password">Old password</string>
    <string name="hint_link">Link</string>
    <string name="error_invalid_token">Invalid or expired token</string>
    <string name="indicate_date">Indicate the date</string>
    <string name="link_is_already_taken">This link is already taken</string>
    <string name="upload">Upload</string>
    <string name="delete">Delete</string>
    <string name="error_password_short">Enter at least one character</string>
    <string name="change">Change</string>
    <string name="wrong_password">Wrong password</string>
    <string name="new_post">New post</string>
    <string name="publish">Publish</string>
    <string name="edit">Edit</string>
    <string name="empty_message">Nothing here yet. \nShare something interesting!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_post_title">Deleting a post</string>
    <string name="delete_post_confirm_text">Are you sure you want to delete the post?</string>
    <string name="delete_moment_title">Deleting a moment</string>
    <string name="delete_moment_confirm_text">Are you sure you want to delete the moment?</string>
    <string name="new_moment">New moment</string>
    <string name="write_something">Write something..</string>
    <string name="or">or</string>
    <string name="moment_hint">Please note: Videos will be trimmed to 15 seconds, and audio will be limited to 5 seconds if only an image is added.</string>
    <string name="user_search_hint">Start typing "@" if you want to find the user by following the link.</string>
    <string name="channel_search_hint">Start typing "@" if you want to find the channel by following the link.</string>
    <string name="search">Search</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="subscribers">Subscribers</string>
    <string name="message">Message</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="camera_is_not_allowed">Camera is not allowed</string>
    <string name="subscribed">You have subscribed!</string>
    <string name="unsubscribed">You have unsubscribed!</string>
    <string name="create_group">Create group</string>
    <string name="name">Name</string>
    <string name="create">Create</string>
    <string name="add_participants">Add participants</string>
    <string name="empty_field">The field cannot be empty</string>
    <string name="group_members">Group members</string>
    <string name="members">members</string>
    <string name="create_channel">Create channel</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="channel_not_found">The channel was not found</string>
    <string name="title">Title</string>
    <string name="submit_request">Submit request</string>
    <string name="rating">Rating</string>
    <string name="subscription_request">subscription \nrequest</string>
    <string name="delete_request">Delete request</string>
    <string name="poll">Poll</string>
    <string name="add">Add</string>
    <string name="search_results">Search Results</string>
    <string name="your_subscriptions">Your subscriptions</string>
    <string name="reply">Reply</string>
    <string name="view_responses">view responses</string>
    <string name="comments">Comments</string>
    <string name="reply_to">reply to: </string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="light">light</string>
    <string name="dark">dark</string>
    <string name="apply">Apply</string>
    <string name="add_to_blacklist">Add to blacklist</string>
    <string name="remove_blacklist">Remove from the blacklist</string>
    <string name="blackList_info">You have been added to the blacklist!</string>
    <string name="who_can_text_me">Who can text me</string>
    <string name="the_changes_have_been_applied">The changes have been applied</string>
    <string-array name="message_mode" translatable="true">
        <item>All</item>
        <item>Subscriptions_only</item>
        <item>Nobody</item>
    </string-array>
    <string name="edited">edited</string>
    <string name="empty_content">The user has no publications yet</string>
    <string name="loaded_from_cache"> loaded from cache</string>
    <string name="new_"> new</string>
    <string name="group">Group</string>
    <string name="channel_management">Channel management</string>
    <string name="reset_poll_info">After editing the post, the poll results will be reset!</string>
    <string name="your_evaluation">Your evaluation:</string>
    <string name="delete_message_title">Deleting a message</string>
    <string name="delete_message_confirm_text">Are you sure you want to delete the message?</string>
    <string name="share">Share</string>
    <string name="users">Users</string>
    <string name="delete_comment_title">Deleting a comment</string>
    <string name="delete_comment_confirm_text">Are you sure you want to delete the comment?</string>
    <string name="writes">writes</string>
    <string name="recording_voice">recording a voice message</string>
    <string name="select_image">selects an image</string>
    <string name="blocked_info">You are blocked</string>
    <string name="outsider_blocked_info">The user was blocked for violating the rules</string>
    <string name="channel_blocked">The channel was blocked for violating the rules</string>
    <string name="delete_chat_title">Deleting a chat</string>
    <string name="delete_chat_confirm_text">Do you really want to delete the message history for this chat?</string>
    <string name="likes">Likes</string>
    <string name="leave">Leave</string>
    <string name="addMembers">Add members</string>
    <string name="invite">Invite</string>
    <string name="evalutions">Evalutions</string>
    <string name="online">online</string>
    <string name="was_online">was online</string>
    <string name="privacyPolicy">Privacy policy</string>
    <string name="accept_privacy_text">I accept the terms of the privacy policy</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="recommendations">Recommendations</string>
    <string name="report">Report</string>
    <string name="complain">Report</string>
    <string name="attachment">Attachment</string>
    <string name="big_file">The file is too big</string>
    <string name="error_when_deleting">Error when deleting</string>
</resources>