<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.emil.linksy.presentation.ui.auth.RegistrationFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_title"
            style="@style/TextTitleStyle">
        </com.google.android.material.textview.MaterialTextView>
    </com.google.android.material.appbar.MaterialToolbar>


    <EditText
        android:id="@+id/et_username"
        style="@style/EditTextStyle"
        android:layout_marginTop="10dp"
        android:maxLength="20"
        android:inputType="text"
        android:hint="@string/hint_username">
    </EditText>

    <EditText
        android:id="@+id/et_email"
        android:layout_marginTop="20dp"
        style="@style/EditTextStyle"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email">
    </EditText>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_error_email_exist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextErrorStyle"
        android:text="@string/email_is_already_registered">

    </com.google.android.material.textview.MaterialTextView>

    <include
        android:id="@+id/tv_error_isNotMail"
        layout="@layout/invalid_email_format_text"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
      >

        <EditText
            android:id="@+id/et_password"
            style="@style/EditTextStyle"
            android:inputType="textPassword"
            android:hint="@string/hint_password">
        </EditText>

        <ImageView
            android:id="@+id/iv_password_change_input_type"
            style="@style/ButtonInEditTextStyle"
            android:src="@drawable/show_password"
            />
    </RelativeLayout>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/et_confirm_password"
            style="@style/EditTextStyle"
            android:inputType="textPassword"
            android:hint="@string/hint_confirm_password">
        </EditText>
        <ImageView
            android:id="@+id/iv_password_confirm_change_input_type"
            style="@style/ButtonInEditTextStyle"
            android:src="@drawable/show_password"
            android:contentDescription="TODO" />


    </RelativeLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_error_password_mismatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextErrorStyle"
        android:text="@string/passwords_do_not_match">

    </com.google.android.material.textview.MaterialTextView>

    <include
        android:id="@+id/tv_error_password_short"
        layout="@layout/password_short_text"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <CheckBox
            android:id="@+id/cb_accept_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
         />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_privacy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/klukva"
            android:textSize="20sp"
          />

    </LinearLayout>







    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up_button">

    </com.google.android.material.button.MaterialButton>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >
    <com.google.android.material.textview.MaterialTextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       style="@style/TextQuestionStyle"
        android:text="@string/question_have_an_account">

    </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bt_login"
            style="@style/TextLinkStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/login_button">

        </com.google.android.material.textview.MaterialTextView>
    </LinearLayout>


</LinearLayout>