<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.emil.linksy.presentation.ui.PasswordRecoveryFragment">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/password_recovery_title"
        style="@style/TextTitleStyle">
    </com.google.android.material.textview.MaterialTextView>
    <LinearLayout
        android:id="@+id/ll_request_password_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
    <EditText
        android:id="@+id/et_email"
        android:layout_marginTop="20dp"
        style="@style/EditTextStyle"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email">
    </EditText>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_user_not_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextErrorStyle"
            android:text="@string/user_not_found">
        </com.google.android.material.textview.MaterialTextView>
    <include
        android:id="@+id/tv_error_isNotMail"
        layout="@layout/invalid_email_format_text"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/button_continue">

    </com.google.android.material.button.MaterialButton>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/ll_confirm_password_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmation_code_sent"
            android:textSize="15sp"
            >

        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/link"
            android:text="test@gmail.com"
            >

        </com.google.android.material.textview.MaterialTextView>
        <EditText
            android:id="@+id/et_code"
            android:layout_marginTop="20dp"
            style="@style/EditTextStyle"
            android:inputType="textEmailAddress"
            android:hint="@string/code">
        </EditText>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_invalid_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextErrorStyle"
            android:text="@string/invalid_confirmation_code">

        </com.google.android.material.textview.MaterialTextView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            >

            <EditText
                android:id="@+id/et_new_password"
                style="@style/EditTextStyle"
                android:inputType="textPassword"
                android:hint="@string/new_password">
            </EditText>

            <ImageView
                android:id="@+id/iv_password_change_input_type"
                style="@style/ButtonInEditTextStyle"
                android:src="@drawable/show_password"
                />
        </RelativeLayout>




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/et_confirm_password"
                style="@style/EditTextStyle"
                android:inputType="textPassword"
                android:hint="@string/hint_confirm_password">
            </EditText>
            <ImageView
                android:id="@+id/iv_password_confirm_change_input_type"
                style="@style/ButtonInEditTextStyle"
                android:src="@drawable/show_password"
                android:contentDescription="TODO" />


        </RelativeLayout>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_error_password_mismatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextErrorStyle"
            android:text="@string/passwords_do_not_match">

        </com.google.android.material.textview.MaterialTextView>

        <include
            android:id="@+id/tv_error_password_short"
            layout="@layout/password_short_text"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/change_button">

        </com.google.android.material.button.MaterialButton>


    </LinearLayout>

    <com.emil.linksy.presentation.custom_view.CustomProgressBar
        android:id="@+id/cpb_loading"
        style="@style/CustomProgressBarStyle">
    </com.emil.linksy.presentation.custom_view.CustomProgressBar>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_back">

    </com.google.android.material.button.MaterialButton>

</LinearLayout>