<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.emil.linksy.presentation.ui.navigation.chat.GroupActivity">





    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_back">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/group">
        </com.google.android.material.textview.MaterialTextView>

    </com.google.android.material.appbar.MaterialToolbar>
    <FrameLayout
        android:id="@+id/fl_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
        <ImageView
            android:id="@+id/iv_group_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/default_group_avatar"

            />
        <ImageButton
            android:id="@+id/iv_load_avatar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_change_avatar"
            />
    </FrameLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:text="@string/name"
        android:textStyle="bold">
    </com.google.android.material.textview.MaterialTextView>

    <EditText
        style="@style/EditTextChangeStyle"
        android:id="@+id/et_name"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:inputType="text">
    </EditText>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_error_name_short"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="@style/TextErrorStyle"
        android:layout_marginHorizontal="10dp"
        android:text="@string/empty_field">
    </com.google.android.material.textview.MaterialTextView>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
       android:layout_marginStart="5dp"
        android:text="@string/group_members"
        android:textStyle="bold">
    </com.google.android.material.textview.MaterialTextView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_users"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        >
    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/neutral"
        android:enabled="false"
        android:layout_gravity="center"
        android:text="@string/apply" >
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_add_members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/green"
        android:layout_gravity="center"
        android:text="@string/addMembers" >
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_leave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/red"
        android:layout_gravity="center"
        android:text="@string/leave" >
    </com.google.android.material.button.MaterialButton>
</LinearLayout>